<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pesabu</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="intro_text">Welcome to Pesabu. Peabu is a handy app that helps you solve your most common financial math problems. Select the type of calculation you would like to do.</string>
    <string name="loan_button_text">Loan</string>
    <string name="tbill_button_text">T-Bill</string>
    <string name="title_activity_loan">Loan Calculator</string>
    <string name="loan_principle_text">Principal</string>
    <string name="two_decimal_number_hint">0.00</string>
    <string name="clear_text">X</string>
    <string name="loan_interest_text">Interest (% p.a.)</string>
    <string name="loan_period_text">Period (months)</string>
    <string name="unsigned_integer">0</string>
    <string name="loan_installment_text">Installment (monthly)</string>
    <string name="calculate_button_text">Calculate</string>
    <string name="total_repaid_text">Total Repaid</string>
    <string name="total_interest_text">Total Interest</string>
    <string name="shopping_button_text">Shopping</string>
    <string name="paye_button_text">PAYE</string>
    <string name="autotax_button_text">Auto Tax</string>
    <string name="tbond_button_text">T-Bond</string>
    <string name="title_activity_tbill">T-Bill Calculator</string>
    <string name="clear_all">Clear all</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="title_activity_pesabu">PesabuActivity</string>
    <string name="title_activity_help">Help</string>
    <string name="help_content">General\n\nThe app blah blah blah!\n\nLoan Calculator\n\nThe loan calculator blah blah blah!</string>
    <string name="title_activity_about">About Pesabu</string>
    <string name="loan_calculator_message1">The loan calculator requires 3 fields to be input so that it works out the 4th.</string>
    <string name="loan_calculator_message2">Please clear one field.</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_buy_tbill">Buy T-Bills</string>
    <string name="title_activity_sell_tbill">Sell T-Bills</string>
    <string name="tbill_days_text">Days</string>

	<string name="gross_salary_text">Gross salary</string>
	<string name="nhif_text">NHIF contribution</string>
	<string name="nssf_text">NSSF contribution (tax exempt)</string>
	<string name="other_paye_exempt_text">Any other tax exempt amount</string>
	<string name="tax_bracket_text">Tax bracket (%)</string>
	<string name="paye_text">PAYE</string>
	<string name="net_salary_text">Net salary</string>

    <string-array name="tbill_types">
        <item>91</item>
        <item>182</item>
        <item>364</item>
    </string-array>

    <string name="tbill_face_value_text">Face Value</string>
    <string name="tbill_face_value_hint">Face Value</string>
    <string name="tbill_interest_rate_text">Interest Rate (%)</string>
    <string name="tbill_discounted_unit_value_text">Discounted Unit Value</string>
    <string name="tbill_units_text">No. of Units</string>
    <string name="tbill_total_investment_text">Total Investment</string>
    <string name="tbill_discounted_total_value_text">Discounted Total Value</string>
    <string name="tbill_tax_text">Withholding Tax (15%)</string>
    <string name="tbill_net_returns_text">Net Returns</string>
    <string name="tbill_tax_exempt_text">Tax Exempt</string>
    <string name="missing_input_field_message">A required input field is missing. Aborting calculation.</string>

</resources>