<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
			xmlns:tools="http://schemas.android.com/tools"
			android:id="@+id/tbondScrollView"
			android:layout_width="match_parent"
			android:layout_height="match_parent" >

	<LinearLayout
			android:id="@+id/LinearLayout1"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:paddingBottom="@dimen/activity_vertical_margin"
			android:paddingLeft="@dimen/activity_horizontal_margin"
			android:paddingRight="@dimen/activity_horizontal_margin"
			android:paddingTop="@dimen/activity_vertical_margin"
			tools:context=".TBillActivity" >

		<TextView
				android:id="@+id/tbondDaysTextView"
				style="@style/InputTextView"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/tbill_days_text" />

		<LinearLayout
				style="@style/RowLayout"
				android:layout_width="match_parent"
				android:layout_height="wrap_content" >

			<Spinner
					android:id="@+id/tbondDaysSpinner"
					android:layout_width="0dip"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:entries="@array/tbill_types" />
		</LinearLayout>

		<TextView
				android:id="@+id/tbondFaceValueTextView"
				style="@style/InputTextView"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/tbill_face_value_text" />

		<LinearLayout
				style="@style/RowLayout"
				android:layout_width="match_parent"
				android:layout_height="wrap_content" >

			<EditText
					android:id="@+id/tbondFaceValueEditText"
					android:layout_width="0dip"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:ems="10"
					android:hint="@string/two_decimal_number_hint"
					android:inputType="numberDecimal" >

				<requestFocus />
			</EditText>
		</LinearLayout>

		<TextView
				android:id="@+id/tbondInterestTextView"
				style="@style/InputTextView"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/tbill_interest_rate_text" />

		<LinearLayout
				style="@style/RowLayout"
				android:layout_width="match_parent"
				android:layout_height="wrap_content" >

			<EditText
					android:id="@+id/tbondInterestEditText"
					android:layout_width="0dip"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:ems="10"
					android:hint="@string/two_decimal_number_hint"
					android:inputType="numberDecimal|numberSigned" />
		</LinearLayout>

		<LinearLayout
				style="@style/RowLayout"
				android:layout_width="match_parent"
				android:layout_height="wrap_content" >

			<CheckBox
					android:id="@+id/tbondTaxExemptCheckBox"
					android:layout_width="0dip"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:text="@string/tbill_tax_exempt_text" />
		</LinearLayout>

		<LinearLayout
				style="@style/RowLayout"
				android:layout_width="match_parent"
				android:layout_height="wrap_content" >

			<Button
					android:id="@+id/tbondCalculateButton"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:onClick="calculateTBond"
					android:text="@string/calculate_button_text" />
		</LinearLayout>

		<TextView
				android:id="@+id/tbondDiscountedUnitValueTextView"
				style="@style/OutputTextView"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/tbill_discounted_unit_value_text" />

		<LinearLayout
				style="@style/RowLayout"
				android:layout_width="match_parent"
				android:layout_height="wrap_content" >

			<EditText
					android:id="@+id/tbondDiscountedValueEditText"
					style="@style/OutputEditText"
					android:layout_width="0dip"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:ems="10"
					android:hint="@string/two_decimal_number_hint" />
		</LinearLayout>

		<TextView
				android:id="@+id/tbondUnitsTextView"
				style="@style/OutputTextView"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/tbill_units_text" />

		<LinearLayout
				style="@style/RowLayout"
				android:layout_width="match_parent"
				android:layout_height="wrap_content" >

			<EditText
					android:id="@+id/tbondUnitsEditText"
					style="@style/OutputEditText"
					android:layout_width="0dip"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:ems="10"
					android:hint="@string/two_decimal_number_hint" />
		</LinearLayout>

		<TextView
				android:id="@+id/tbondDiscountedTotalValueTextView"
				style="@style/OutputTextView"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/tbill_discounted_total_value_text" />

		<LinearLayout
				style="@style/RowLayout"
				android:layout_width="match_parent"
				android:layout_height="wrap_content" >

			<EditText
					android:id="@+id/tbondDiscountedTotalValueEditText"
					style="@style/OutputEditText"
					android:layout_width="0dip"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:ems="10"
					android:hint="@string/two_decimal_number_hint" />
		</LinearLayout>

		<TextView
				android:id="@+id/tbondTaxTextView"
				style="@style/OutputTextView"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/tbill_tax_text" />

		<LinearLayout
				style="@style/RowLayout"
				android:layout_width="match_parent"
				android:layout_height="wrap_content" >

			<EditText
					android:id="@+id/tbondTaxEditText"
					style="@style/OutputEditText"
					android:layout_width="0dip"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:ems="10"
					android:hint="@string/two_decimal_number_hint" />
		</LinearLayout>

		<TextView
				android:id="@+id/tbondTotalInvestmentTextView"
				style="@style/OutputTextView"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/tbill_total_investment_text" />

		<LinearLayout
				style="@style/RowLayout"
				android:layout_width="match_parent"
				android:layout_height="wrap_content" >

			<EditText
					android:id="@+id/tbondInvestmentEditText"
					style="@style/OutputEditText"
					android:layout_width="0dip"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:ems="10"
					android:hint="@string/two_decimal_number_hint" />
		</LinearLayout>

		<TextView
				android:id="@+id/tbondTotalReturnsTextView"
				style="@style/OutputTextView"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/tbill_net_returns_text" />

		<LinearLayout
				style="@style/RowLayout"
				android:layout_width="match_parent"
				android:layout_height="wrap_content" >

			<EditText
					android:id="@+id/tbondTotalReturnsEditText"
					style="@style/OutputEditText"
					android:layout_width="0dip"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:ems="10"
					android:hint="@string/two_decimal_number_hint" />
		</LinearLayout>
	</LinearLayout>

</ScrollView>